--- a/responsiveWebDesign/Projects/surveyForm/index.html
+++ b/responsiveWebDesign/Projects/surveyForm/index.html
@@ -5,27 +5,32 @@
     <title>Survey Form</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 
 <body>
     <header>
         <h1 id="title">FreeCodeCamp Survey Form</h1>
-        <p id="description"><em>Thank you for taking the time to help us improve the platform</em>
+        <p id="description">
+            <em>Thank you for taking the time to help us improve the platform</em>
         <p>
     </header>
     <main>
         <form id="survey-form">
-            <label for="name">Name</label>
+            <label id="name-label" for="name">Name</label>
             <input id="name" name="name" type="text" placeholder="Enter your name" required />
 
-            <label for="email">Email</label>
-            <input id="email" name="email" type="text" placeholder="Enter your Email" required />
+            <label id="email-label" for="email">Email</label>
+            <input id="email" name="email" type="email" placeholder="Enter your Email" required />
 
-            <label for="age">Age (optional)</label>
-            <input id="age" name="age" type="text" placeholder="Age" />
+            <label id="number-label" for="number">
+                Age 
+                <span>(optional)</span>
+            </label>
+            <input id="number" name="age" type="number" placeholder="Age" min="0" max="120" />
 
-            <label for="role">Which option best describes your current role?</label>
-            <select id="role" name="role">
+            <label for="dropdown">Which option best describes your current role?</label>
+            <select id="dropdown" name="role" required>
                 <option value="">Select current role</option>
                 <option value="Student">Student</option>
                 <option value="Full Time Job">Full Time Job</option>
@@ -38,7 +43,7 @@
                 <p>Would you recommend freeCodeCamp to a friend?</p>
 
                 <label for="definitely">Definitely</label>
-                <input type="radio" id="definitely" name="recommend" value="definitely" />
+                <input type="radio" id="definitely" name="recommend" value="definitely" checked/>
 
                 <label for="maybe">Maybe</label>
                 <input type="radio" id="maybe" name="recommend" value="maybe" />
@@ -47,8 +52,8 @@
                 <input type="radio" id="not sure" name="recommend" value="not sure" />
             </fieldset>
 
-            <label for="favorite-feature">What is your favorite feature of freeCodeCamp?</label>
-            <select id="favorite-feature" name="favorite-feature">
+            <label for="dropdown">What is your favorite feature of freeCodeCamp?</label>
+            <select id="dropdown" name="favorite-feature" required>
                 <option value="">Select an option</option>
                 <option value="Challenges">Challenges</option>
                 <option value="Projects">Projects</option>
@@ -57,46 +62,48 @@
             </select>
 
             <fieldset>
-                <p>What would you like to see improved? (Check all that apply)</p>
+                <p>
+                    What would you like to see improved? <span>(Check all that apply)</span>
+                </p>
 
                 <label for="Front-end Projects">Front-end Projects</label>
-                <input type="checkbox" id="Front-end Projects" name="Front-end Projects" />
+                <input type="checkbox" id="Front-end Projects" name="Front-end Projects" value="Yes"/>
 
                 <label for="Back-end Projects">Back-end Projects</label>
-                <input type="checkbox" id="Back-end Projects" name="Back-end Projects" />
+                <input type="checkbox" id="Back-end Projects" name="Back-end Projects" value="Yes"/>
 
                 <label for="Data Visualization">Data Visualization</label>
-                <input type="checkbox" id="Data Visualization" name="Data Visualization" />
+                <input type="checkbox" id="Data Visualization" name="Data Visualization" /value="Yes">
 
                 <label for="Challenges">Challenges</label>
-                <input type="checkbox" id="Challenges" name="Challenges" />
+                <input type="checkbox" id="Challenges" name="Challenges" value="Yes"/>
 
                 <label for="Open Source Community">Open Source Community</label>
-                <input type="checkbox" id="Open Source Community" name="Open Source Community" />
+                <input type="checkbox" id="Open Source Community" name="Open Source Community" value="Yes"/>
 
                 <label for="Gitter help rooms">Gitter help rooms</label>
-                <input type="checkbox" id="Gitter help rooms" name="Gitter help rooms" />
+                <input type="checkbox" id="Gitter help rooms" name="Gitter help rooms" value="Yes"/>
 
                 <label for="Videos">Videos</label>
-                <input type="checkbox" id="Videos" name="Videos" />
+                <input type="checkbox" id="Videos" name="Videos" value="Yes"/>
 
                 <label for="City Meetups">City Meetups</label>
-                <input type="checkbox" id="City Meetups" name="City Meetups" />
+                <input type="checkbox" id="City Meetups" name="City Meetups" value="Yes"/>
 
                 <label for="Wiki">Wiki</label>
-                <input type="checkbox" id="Wiki" name="Wiki" />
+                <input type="checkbox" id="Wiki" name="Wiki" value="Yes"/>
 
                 <label for="Forum">Forum</label>
-                <input type="checkbox" id="Forum" name="Forum" />
+                <input type="checkbox" id="Forum" name="Forum" value="Yes"/>
 
                 <label for="Additional Courses">Additional Courses</label>
-                <input type="checkbox" id="Additional Courses" name="Additional Courses" />
+                <input type="checkbox" id="Additional Courses" name="Additional Courses" value="Yes"/>
             </fieldset>
 
             <label for="comments">Any comments or suggestions?</label>
             <textarea id="comments" name="comments" rows="5" cols="50">Enter your comment here...</textarea>
 
-            <input type="submit" value="Submit" />
+            <input id="submit" type="submit" value="Submit" />
         </form>
     </main>
 </body>
