--- a/responsiveWebDesign/Projects/persPortfolioPage/index.html
+++ b/responsiveWebDesign/Projects/persPortfolioPage/index.html
@@ -30,40 +30,71 @@
             <h1>Some projects I've made on <span>freeCodeCamp</span></h1>
             <div class="project-grid">
                 <div class="project-tile">
-                    <i class="fa-solid fa-bolt"></i>
-                    <a target="_blank" href="https://codepen.io/angelothysbosonit/full/yLjpOOR">Product Landing Page</a>
-                    <i class="fa-solid fa-bolt"></i>
+                    <a target="_blank" href="https://codepen.io/angelothysbosonit/full/yLjpOOR">
+                        <i class="fa-solid fa-4x fa-cart-shopping"></i>
+                        <div class="desc">
+                            <i class="fa-solid fa-1x fa-bolt"></i> Product Landing Page
+                            <i class="fa-solid fa-1x fa-bolt"></i>
+                        </div>
+                    </a>
                 </div>
                 <div class="project-tile">
-                    <i class="fa-solid fa-lightbulb"></i>
-                    <a target="_blank" href="https://codepen.io/angelothysbosonit/full/dyeJMMG">Technical Documentation Page</a>
-                    <i class="fa-solid fa-lightbulb"></i>
+                    <a target="_blank" href="https://codepen.io/angelothysbosonit/full/dyeJMMG">
+                        <i class="fa-solid fa-4x fa-file-lines"></i>
+                        <div class="desc">
+                            <i class="fa-solid fa-1x fa-lightbulb"></i> Technical Documentation Page
+                            <i class="fa-solid fa-1x fa-lightbulb"></i>
+                        </div>
+                    </a>
                 </div>
-                <div class="project-tile">
-                    <i class="fa-solid fa-bolt"></i>
-                    <a target="_blank" href="https://codepen.io/angelothysbosonit/full/NWMXNxy">Tribute Page</a>
-                    <i class="fa-solid fa-bolt"></i>
+                <div class="project-tile"> 
+                    <a target="_blank" href="https://codepen.io/angelothysbosonit/full/NWMXNxy">
+                        <i class="fa-solid fa-4x fa-award"></i>
+                        <div class="desc">
+                            <i class="fa-solid fa-1x fa-lightbulb"></i> Tribute Page
+                            <i class="fa-solid fa-1x fa-lightbulb"></i>
+                        </div>
+                    </a>
                 </div>
-                <div class="project-tile">
-                    <i class="fa-solid fa-lightbulb"></i>
-                    <a target="_blank" href="https://codepen.io/angelothysbosonit/full/XWqVdmQ">Survey Form</a>
-                    <i class="fa-solid fa-lightbulb"></i>
+                <div class="project-tile">    
+                    <a target="_blank" href="https://codepen.io/angelothysbosonit/full/XWqVdmQ">
+                        <i class="fa-solid fa-4x fa-circle-check"></i>
+                        <div class="desc">
+                            <i class="fa-solid fa-1x fa-bolt"></i> Survey Form
+                            <i class="fa-solid fa-1x fa-bolt"></i>
+                        </div>
+                    </a>
                 </div>
             </div>
-            <button>
-                <a target="_blank" href="https://codepen.io/angelothysbosonit">Show all</a>
-            </button>
+            <a class="button" target="_blank" rel="noopener" href="https://codepen.io/angelothysbosonit">
+                <i class="fa-solid fa-atom"></i>
+                <p>Show All</p>
+            </a>
         </section>
         <section id="socials">
             <h1>Here are some ways of contacting me</h1>
-            <a id="profile-link" target="_blank" href="https://github.com/AngeloThysBosonit"></a>
-            <a id="profile-link2" target="_blank" href="https://www.linkedin.com/in/angelo-thys/"></a>
-            <a id="profile-link3" target="_blank" href="https://www.freecodecamp.org/AngeloThysBosonit"></a>
+            <div class="socials-grid">
+                <a id="profile-link" target="_blank" href="https://github.com/AngeloThysBosonit">
+                    <i class="fa-brands fa-3x fa-square-github"></i>
+                    <i class="fa-solid fa-magnet"></i>
+                </a>
+                <a id="profile-link2" target="_blank" href="https://www.linkedin.com/in/angelo-thys/">
+                    <i class="fa-brands fa-3x fa-linkedin"></i>
+                    <i class="fa-solid fa-magnet"></i>
+                </a>
+                <a id="profile-link3" target="_blank" href="https://www.freecodecamp.org/AngeloThysBosonit">
+                    <i class="fa-brands fa-3x fa-free-code-camp"></i>
+                    <i class="fa-solid fa-magnet"></i>
+                </a>
+            </div>
         </section>
     </main>
     <footer>
-        <p class="disclaimer">**This is a portfolio project from freeCodeCamp designed by me.</p>
-        <p class="copyright">© Created for freeCodeCamp </p>
+        <p class="copyright">A freeCodeCamp Project</p>
+        <p class="disclaimer">
+            An Angelo Thys Creation
+            <i class="fa-solid fa-car-battery"></i>
+        </p>
     </footer>
 </body>
 
